@@ -1,3 +1,7 @@
+2005-11-26 Oliver Brakmann <oliverbrakmann@users.berlios.de>
+
+	* scripts/pkginfo.in: Updated help screen.
+
 2005-11-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* scripts/libprometheus.bash.in: Removed function
